tests/init/neg/parent-child/override46.scala
trait TA {
  val x = "world"   // error
}

trait TB { this: TA =>
  val m = "hello" + x
}

class Bar extends TB with TA
